// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExpandedAddress - snapshots ExpandedAddress with title and button 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <
      color="#c3c3c3"
      icon={
        {
          "icon": [
            384,
            512,
            [
              128473,
              10005,
              10006,
              10060,
              215,
              "close",
              "multiply",
              "remove",
              "times",
            ],
            "f00d",
            "M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z",
          ],
          "iconName": "xmark",
          "prefix": "fas",
        }
      }
      size={24}
      style={
        {
          "alignSelf": "flex-end",
          "marginRight": 20,
          "marginTop": 10,
        }
      }
    />
  </View>
  <Text
    style={
      {
        "alignSelf": "center",
        "color": "#c3c3c3",
        "fontSize": 15,
        "fontWeight": "400",
        "marginTop": 0,
        "opacity": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    My Address
  </Text>
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "#011401",
        "borderRadius": 8,
        "padding": 16,
        "width": "90%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
        }
      }
    >
      <Text
        style={
          {
            "color": "#cbd5e1",
            "fontSize": 16,
            "marginBottom": 20,
          }
        }
      >
        u1abc123def456abc123def456abc123def456abc123
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "backgroundColor": "#2A394D",
            "borderColor": "#3B4B5F",
            "borderRadius": 5,
            "borderWidth": 1,
            "opacity": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ccc",
              "fontSize": 16,
            }
          }
        >
          Copy
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ExpandedAddress - snapshots ExpandedAddress without optional props 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <
      color="#c3c3c3"
      icon={
        {
          "icon": [
            384,
            512,
            [
              128473,
              10005,
              10006,
              10060,
              215,
              "close",
              "multiply",
              "remove",
              "times",
            ],
            "f00d",
            "M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z",
          ],
          "iconName": "xmark",
          "prefix": "fas",
        }
      }
      size={24}
      style={
        {
          "alignSelf": "flex-end",
          "marginRight": 20,
          "marginTop": 10,
        }
      }
    />
  </View>
  <Text
    style={
      {
        "alignSelf": "center",
        "color": "#c3c3c3",
        "fontSize": 15,
        "fontWeight": "400",
        "marginTop": 0,
        "opacity": 1,
        "paddingHorizontal": 10,
      }
    }
  />
  <View
    style={
      {
        "alignSelf": "center",
        "backgroundColor": "#011401",
        "borderRadius": 8,
        "padding": 16,
        "width": "90%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
        }
      }
    >
      <Text
        style={
          {
            "color": "#cbd5e1",
            "fontSize": 16,
            "marginBottom": 20,
          }
        }
      >
        u1abc123def456abc123def456abc123def456abc123
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "backgroundColor": "#2A394D",
            "borderColor": "#3B4B5F",
            "borderRadius": 5,
            "borderWidth": 1,
            "opacity": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#ccc",
              "fontSize": 16,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
